Fix #9. Презентация.
